--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-
-<p>Welcome to the Macropod</p>
-
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>THE MACROPOD<title>
+</head>
+<body>
+  <h1>Content Coming</h1>
+  <footer>Test</footer>
+</body>
 </html>
