html bracket was missing

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>THE MACROPOD<title>
+  <title>THE MACROPOD</title>
 </head>
 <body>
   <h1>Content Coming</h1>
