--- a/index.html
+++ b/index.html
@@ -3,8 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <title>THE MACROPOD</title>
+  <style>
+	body {
+	  margin: 0;
+	  font-family: Arial, Helvetica, sans-serif;
+	}
+
+	.topnav {
+	  overflow: hidden;
+	  background-color: #333;
+	}
+
+	.topnav a {
+	  float: left;
+	  color: #f2f2f2;
+	  text-align: center;
+	  padding: 14px 16px;
+	  text-decoration: none;
+	  font-size: 17px;
+	}
+
+	.topnav a:hover {
+	  background-color: #ddd;
+	  color: black;
+	}
+
+	.topnav a.active {
+	  background-color: #4CAF50;
+	  color: white;
+	}
+	</style>
 </head>
 <body>
+	<div class="topnav">
+		<a class="active" href="index.html">Home</a>
+		<a href="music.html">Music</a>
+		<a href="books.html">Books</a>
+	</div>
+
   <h1>Content Coming</h1>
   <p>THere will be ample macropod content on this site.</p>
   <footer>Test</footer>
