--- a/music.html
+++ b/music.html
@@ -9,6 +9,13 @@
 		  font-family: Arial, Helvetica, sans-serif;
 		}
 
+		table {
+			border-collapse: collapse;
+		}
+		table, th, td {
+			border: 1px solid black;
+		}
+
 		.topnav {
 		  overflow: hidden;
 		  background-color: #333;
@@ -42,6 +49,7 @@
 	</div>
 	<h1>Cool Music</h1>
 	<p>This is some cool music</p>
+	
 	<table border="1" class="dataframe">
 	  <thead>
 	    <tr style="text-align: right;">
