--- a/guides.html
+++ b/guides.html
@@ -36,14 +36,15 @@
 </head>
 <body>
 	<div class="topnav">
-		<a class="active" href="index.html">Home</a>
+		<a href="index.html">Home</a>
 		<a href="music.html">Music</a>
 		<a href="books.html">Books</a>
-		<a href="guides.html">Guides</a>
+		<a class="active" href="guides.html">Guides</a>
 	</div>
 
-  <h1>Content Coming</h1>
-  <p>THere will be ample macropod content on this site.</p>
+  <h1>Guides on some stuff</h1>
+  <a href="youtube-playlist-table.html">Make an HTML Table of links from a YT Playlist</a>
+  
   <footer>Test</footer>
 </body>
 </html>
