--- a/books.html
+++ b/books.html
@@ -39,6 +39,7 @@
 		<a href="index.html">Home</a>
 		<a href="music.html">Music</a>
 		<a class="active" href="books.html">Books</a>
+		<a href="guides.html">Guides</a>
 	</div>
 	<h1>Cool Books</h1>
 	<p>These are some cool books</p>
