--- a/youtube-playlist-table.html
+++ b/youtube-playlist-table.html
@@ -46,18 +46,18 @@
 	
 	<h2>Youtube-dl</h2>
 	<p>youtube-dl is a useful command line tool / python api that can fetch youtube videos and download them. Here it will be used to create a list of video id's from a link to a playlist on youtube. First, we need to install youtube-dl using pip:
-		<code>sudo pip install --upgrade youtube_dl</code>
+	<p><code>sudo pip install --upgrade youtube_dl</code></p>
 	Now to fetch the list of video id's use the command:
-		<code>youtube-dl --get-id PLAYLISTLINK -i </code>
+	<p><code>youtube-dl --get-id PLAYLISTLINK -i </code></p>
 	You should pipe the output of this command into a file to use later. Alternatively, one could run this command from inside of a python script and deal with the output directly. Now, load the file into python and read over it in a loop. For each video id, we need to add the rest of the youtube link (http://www.youtube.com/watch?v=) then open this link and extract the title. 
-		<code>import lxml
+	<p><code>	import lxml
 			from lxml import etree
 			import urllib
 			y = etree.HTML(urllib.open(FULL_LINK).read())
 			title = y.xpath("//span[@id='eow-title']/@title")
 			title = ''.join(title)
 			title = title.encode('ascii', errors='ignore') #remove bad chars
-		</code>
+	</code></p>
 	This code will give the title of a video from its video id. These can be added to a dataframe, after which the function <code>df.to_html(filename)</code> can be used to create a table.
 				
   <footer>Test</footer>
