--- a/guides.html
+++ b/guides.html
@@ -44,7 +44,9 @@
 
   <h1>Guides on some stuff</h1>
   <a href="youtube-playlist-table.html">Make an HTML Table of links from a YT Playlist</a>
+  <a href="bitcoin-node.html">Setup a BTC Node on a Raspberry Pi</a>
+  <a href="vim.html">Helpful Vim Commands</a>
+  <a href="polybar.html">Configure Polybar</a>
   
-  <footer>Test</footer>
 </body>
 </html>
