images on page and links page

--- a/links.html
+++ b/links.html
@@ -36,16 +36,14 @@
 </head>
 <body>
 	<div class="topnav">
-		<a class="active" href="index.html">Home</a>
+		<a href="index.html">Home</a>
 		<a href="music.html">Music</a>
 		<a href="books.html">Books</a>
 		<a href="guides.html">Guides</a>
-		<a href="links.html">Links</a>
+		<a class="active" href="links.html">Links</a>
 	</div>
 
-  <h1>This is my Website</h1>
-  <img src="images/im1.jpeg">
-  <img src="images/img2.jpg">
-  <img src="images/im3.jpeg">
+  <h1>My Links</h1>
+  <p><a href="https://github.com/watersnake1">Github</a></p>
 </body>
 </html>
