--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 	  font-family: Arial, Helvetica, sans-serif;
 	}
 
+	img {
+		max-width: 100%;
+		height: auto;
+
 	.topnav {
 	  overflow: hidden;
 	  background-color: #333;
