update the navbar

--- a/books.html
+++ b/books.html
@@ -40,6 +40,7 @@
 		<a href="music.html">Music</a>
 		<a class="active" href="books.html">Books</a>
 		<a href="guides.html">Guides</a>
+		<a href="links.html">Links</a>
 	</div>
 	<h1>Cool Books</h1>
 	<p>These are some cool books</p>
