--- a/guides.html
+++ b/guides.html
@@ -40,6 +40,7 @@
 		<a href="music.html">Music</a>
 		<a href="books.html">Books</a>
 		<a class="active" href="guides.html">Guides</a>
+		<a href="links.html">Links</a>
 	</div>
 
   <h1>Guides on some stuff</h1>
