--- a/music.html
+++ b/music.html
@@ -48,6 +48,7 @@
 		<a class="active" href="music.html">Music</a>
 		<a href="books.html">Books</a>
 		<a href="guides.html">Guides</a>
+		<a href="links.html">Links</a>
 	</div>
 	<h1>Cool Music</h1>
 	<p>This is some cool music</p>
