raspberry pi btc node

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
 	</div>
 
   <h1>This is my Website</h1>
+  <p>Bitcoin Information:
+  	<script>
+		var xhttp = new XMLHttpRequest();
+		xhttp.open("GET", "http://24.61.155.218:4444/api/getmininginfo", true);
+		xhttp.send();
+	</script>
+  </p>
   <img src="images/im1.jpeg">
   <img src="images/img2.jpg">
   <img src="images/im3.jpeg">
