--- a/guides.html
+++ b/guides.html
@@ -46,7 +46,7 @@
   <h1>Guides on some stuff</h1>
   <a href="youtube-playlist-table.html">Make an HTML Table of links from a YT Playlist</a>
   <br>
-  <a href="bitcoin-node.html">Setup a BTC Node on a Raspberry Pi</a>
+  <a href="btc.html">Setup a BTC Node on a Raspberry Pi</a>
   <br>
   <a href="vim.html">Helpful Vim Commands</a>
   <br>
