--- a/guides.html
+++ b/guides.html
@@ -51,6 +51,8 @@
   <a href="vim.html">Helpful Vim Commands</a>
   <br>
   <a href="polybar.html">Configure Polybar</a>
+  <br>
+  <a href="eths2f.html">The S2F Model Applied to Ethereum</a>
   
 </body>
 </html>
