--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<a class="active" href="index.html">Home</a>
 		<a href="music.html">Music</a>
 		<a href="books.html">Books</a>
-		<a href="guides.html">Guides</a>
+		<a href="guides.html">Writing and Guides</a>
 		<a href="links.html">Links</a>
 	</div>
 
