--- a/links.html
+++ b/links.html
@@ -39,7 +39,7 @@
 		<a href="index.html">Home</a>
 		<a href="music.html">Music</a>
 		<a href="books.html">Books</a>
-		<a href="guides.html">Guides</a>
+		<a href="guides.html">Writing and Guides</a>
 		<a class="active" href="links.html">Links</a>
 	</div>
 
