--- a/music.html
+++ b/music.html
@@ -47,7 +47,7 @@
 		<a href="index.html">Home</a>
 		<a class="active" href="music.html">Music</a>
 		<a href="books.html">Books</a>
-		<a href="guides.html">Guides</a>
+		<a href="guides.html">Writing and Guides</a>
 		<a href="links.html">Links</a>
 	</div>
 	<h1>Cool Music</h1>
