changed into message

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 		<a href="links.html">Links</a>
 	</div>
 
-  <h1>This is my Website</h1>
-  <p>Bitcoin Information:
+  <h1>The Macropod</h1>
+  <p>This is a collection of things that I have created, written or find interesting.</p>
   	<script>
 		var xhttp = new XMLHttpRequest();
 		xhttp.open("GET", "http://24.61.155.218:4444/api/getmininginfo", true);
