removed doxxing twitter link from main page; added some books to books.html; updated links page with twitter link

--- a/books.html
+++ b/books.html
@@ -9,6 +9,11 @@
 		  font-family: Arial, Helvetica, sans-serif;
 		}
 
+		article {
+			padding: 10px;
+			width: 70%;
+		}
+
 		.topnav {
 		  overflow: hidden;
 		  background-color: #333;
@@ -43,6 +48,34 @@
 		<a href="links.html">Links</a>
 	</div>
 	<h1>Cool Books</h1>
-	<p>These are some cool books</p>
+	<p>These are books that I have read and I like.</p>
+
+	<article>
+	<div>
+	<p><img src="images/jaynes.jpeg" height="250px" width="150px"></p>
+	<p>Jaynes, Julian: The Origin of Conciousness in the Breakdown of the Bicameral Mind | 978-0618057078</p>
+	</div>
+
+	<div>
+	<p><img src="images/land.jpeg" height="250px" width="150px"></p>
+	<p>Land, Nick: Fanged Noumena | 978-0955308789</p>
+	</div>
+
+	<div>
+	<p><img src="images/guattari1.jpg" height="250px" width="150px"></p>
+	<p>Guattari, Felix: The Machinic Unconcious: Essays in Schizoanalysis | 978-1584350880</p>
+	</div>
+
+	<div>
+	<p><img src="images/lie.jpg" height="250px" width="150px"></p>
+	<p>Lipkin, Harry J: Lie Groups for Pedestrians | 978-0486421858</p>
+	</div>
+
+	<div>
+	<p><img src="images/rothbard1.jpg" height="250px" width="150px"></p>
+	<p>Rothbard, Murray N: For a New Liberty: The Libertarian Manifesto</p> 
+	</div>
+	</article>
+
 </body>
 </html>
