--- a/links.html
+++ b/links.html
@@ -9,6 +9,11 @@
 	  font-family: Arial, Helvetica, sans-serif;
 	}
 
+	article {
+		width: 70%;
+		padding: 5px;
+	}
+
 	.topnav {
 	  overflow: hidden;
 	  background-color: #333;
@@ -44,6 +49,9 @@
 	</div>
 
   <h1>My Links</h1>
+  <article>
   <p><a href="https://github.com/watersnake1">Github</a></p>
+  <p><a href="https://www.twitter.com/Fillial_Crypto">Twitter</a></p>
+  </article>
 </body>
 </html>
