added animation; added more books; restyled some things. TODO: bring animation to all pages, change fonts

--- a/books.html
+++ b/books.html
@@ -75,6 +75,22 @@
 	<p><img src="images/rothbard1.jpg" height="250px" width="150px"></p>
 	<p>Rothbard, Murray N: For a New Liberty: The Libertarian Manifesto</p> 
 	</div>
+
+	<div>
+	<p><img src="images/chomsky.jpg" height="250px" width="150px"></p>
+	<p>Chomsky, Noam: Language and Mind</p>
+	</div>
+
+	<div>
+	<p><img src="images/fanon.jpg" height="250px" width="150px"></p>
+	<p>Fanon, Frantz: Black Skin, White Masks</p>
+	</div>
+
+	<div>
+	<p><img src="images/diop.jpg" height="250px" width="150px"></p>
+	<p>Diop, Chiekh Anta: Civilization or Barbarism: An Authentic Anthropology</p>
+	</div>
+
 	</article>
 
 </body>
