--- a/music.html
+++ b/music.html
@@ -4,10 +4,46 @@
 	<meta charset="UTF-8">
 	<title>MACROPOD MUSIC</title>
   	<style>
-		body {
-		  margin: 0;
-		  font-family: Arial, Helvetica, sans-serif;
+		body,html {
+		  background: #007bff;
+		  height:100%;
 		}
+		h1 {
+		  height:auto;
+		  display:table;
+		  width: 80%;
+		  text-align:center;
+		  overflow: auto;
+		  margin: auto;
+		  position: static;
+		  top: 0;left: 0;bottom: 0;right: 0;
+		  color: white;
+		  font-family: 'Raleway', sans-serif;
+		  font-weight:300;
+		  font-size:3em;
+		}
+
+		h2 {
+		    position: fixed;
+		    text-align:center;
+		    top:10px;
+		    right:20px;
+		    color:white;
+		    font-size: 20px;
+		    font-family: Roboto;
+		    font-weight: normal;
+				z-index:999;
+		    span{
+		      font-size:15px;
+		      font-weight: lighter;
+		    }
+		    a{
+		      color:white;
+		      font-size:15px;
+		      padding: 0 30px
+
+		    }
+		  }
 
 		table {
 			border-collapse: collapse;
@@ -17,6 +53,11 @@
 			border: 1px solid black;
 		}
 
+		.splash {
+			position: fixed;
+			top: 10%;
+			left: 60%;
+		}
 		.topnav {
 		  overflow: hidden;
 		  background-color: #333;
@@ -43,6 +84,8 @@
 	</style>
 </head>
 <body>
+	<script src="jquery.js"</script>
+	<script src="animation.js"></script>
 	<div class="topnav">
 		<a href="index.html">Home</a>
 		<a class="active" href="music.html">Music</a>
@@ -50,7 +93,9 @@
 		<a href="guides.html">Writing and Guides</a>
 		<a href="links.html">Links</a>
 	</div>
+	<div class="splash">
 	<h1>Cool Music</h1>
+	</div>
 	<p>This is some cool music</p>
 	
 	<table border="1" class="dataframe">
