--- a/guides.html
+++ b/guides.html
@@ -103,6 +103,10 @@
   <a href="polybar.html">Configure Polybar</a>
   <br>
   <a href="eths2f.html">The S2F Model Applied to Ethereum</a>
+  <br>
+  <a href="tor.html">Setting up Tor with Bitcoin Core</a>
+  <br>
+  <a href="quickconnect.html">Create QuickConnect QR Codes</a>
   </div>
   
 </body>
