change active menu color to blue

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 	}
 
 	.topnav a.active {
-	  background-color: #4CAF50;
+	  /*background-color: #4CAF50;*/
+	  background-color: #007bff;
 	  color: white;
 	}
 
