--- a/links.html
+++ b/links.html
@@ -70,7 +70,8 @@
 	}
 
 	.topnav a.active {
-	  background-color: #4CAF50;
+	  /*background-color: #4CAF50;*/
+	  background-color: #007bff;
 	  color: white;
 	}
 	a {
