added 4 more books

--- a/books.html
+++ b/books.html
@@ -92,6 +92,26 @@
 	<p>Diop, Chiekh Anta: Civilization or Barbarism: An Authentic Anthropology</p>
 	</div>
 
+	<div>
+	<p><img src="images/lyotard.jpeg" height="250px" width="150px"></p>
+	<p>Lyotard, Jean-Francois: The Postmodern Condition: A Report on Knowledge</p>
+	</div>
+
+	<div>
+	<p><img src="images/rand1.png" height="250px" width="150px"></p>
+	<p>Rand, Ayn: The Romantic Manifesto</p>
+	</div>
+
+	<div>
+	<p><img src="images/sov.jpeg" height="250px" width="150px"></p>
+	<p>Davidson, James Dale & Rees-Mogg, Lord William: The Sovereign Individual Mastering The Transition To The Digital Age</p>
+	</div>
+
+	<div>
+	<p><img src="images/jackson.jpg" height="250px" width="150px"></p>
+	<p>Jackson Isaiah: Bitcoin and Black America</p>
+	</div>
+
 	</article>
 
 </body>
